140509_02/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: retailai
  labels:
    name: retailai
    environment: production
